# ar-fashion-tryon

./: .gitignore  3D approch 1.py  CLAUDE.md  LICENSE  MainN.py  README.md  docker-compose.yml  export-commits-with-files.sh
image-extraction-backend/: API_DOCUMENTATION.md  API_README.md  ARCHITECTURE.md  BACKEND_AR_IMPLEMENTATION.md  CLAUDE.md  DEBUG_VERBOSE_OUTPUT.md  DEPLOYMENT.md  FIXES_APPLIED.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KEYPOINT_API_GUIDE.md  MMPOSE_INSTALL_ORDER_FIX.md  MMPOSE_MODEL_DOWNLOAD.md  MODEL_COMPATIBILITY.md  NUMPY_COMPATIBILITY_FIX.md  Procfile  RAILWAY_DEPLOYMENT_FIX.md  README.md  WEBSOCKET_API.md  app.py  config.py  convert_model.py  download_models_railway.sh  download_models_railway_v2.sh  evaluate_model_thesis_colab.ipynb  install_mmpose.sh  middleware.py  models.py  nixpacks.toml  pyproject.toml  requirements.txt  test_keypoint_api.py  test_model_load.py  train_clothing_classifier_colab.ipynb
image-extraction-backend/app/: config.py  main.py
image-extraction-backend/docs/: README.md
image-extraction-backend/models/: README.md  best_clothing_model.h5  class_labels.json  clothing_model_final.h5  model_config.json  rejection_threshold.json
image-extraction-backend/notebooks/: evaluate_model_thesis_colab.ipynb  train_clothing_classifier_colab.ipynb
image-extraction-backend/routers/: ws_fit.py
image-extraction-backend/services/: __init__.py  classifier.py  cloudinary_service.py  fit_solver.py  garment_processor.py  gradio_service.py  image_processing.py  keypoint_service.py  ws_fit_session.py
(+302 files in other folders)
